[NCL-9036] API changes for rollback process
