# core/src/main/java/org/jboss/pnc/rex/core/api/RollbackManager.java
@@ -15,30 +15,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package org.jboss.pnc.rex.dto;
+package org.jboss.pnc.rex.core.api;
 
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.ToString;
-import org.jboss.pnc.rex.common.enums.Origin;
-import org.jboss.pnc.rex.common.enums.State;
+public interface RollbackManager {
 
-@Getter
-@Builder
-@ToString
-@NoArgsConstructor
-@AllArgsConstructor
-public class ServerResponseDTO {
-
-    public State state;
-
-    public Boolean positive;
-
-    public Integer rollbackCounter;
-
-    public Object body;
-
-    public Origin origin;
+    void rollbackFromMilestone(String name);
 }
