# core/src/main/resources/META-INF/openapi.yaml
@@ -258,6 +258,12 @@ paths:
           type: array
           items:
             type: string
+      - name: rollingback
+        in: query
+        description: Should include task in process of rollback?
+        schema:
+          default: "false"
+          type: boolean
       responses:
         "200":
           description: Success with results
@@ -550,6 +556,88 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
+  /test/transaction:
+    get:
+      tags:
+      - Test Endpoint
+      operationId: testTransaction
+      responses:
+        "200":
+          description: OK
+  /rest/callback/{taskName}/rollback/fail:
+    post:
+      tags:
+      - Callback endpoint
+      summary: "[ADMIN] Used by remote entity to report failed Task rollback process."
+      operationId: rollbackNOK
+      parameters:
+      - name: taskName
+        in: path
+        required: true
+        schema:
+          minLength: 1
+          type: string
+      - name: err
+        in: query
+        schema:
+          default: PASS_ERROR
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema: {}
+      responses:
+        "200":
+          description: Success with results
+        "400":
+          description: Invalid input parameters or validation error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+  /rest/callback/{taskName}/rollback/succeed:
+    post:
+      tags:
+      - Callback endpoint
+      summary: "[ADMIN] Used by remote entity to report successful Task rollback process."
+      operationId: rollbackOK
+      parameters:
+      - name: taskName
+        in: path
+        required: true
+        schema:
+          minLength: 1
+          type: string
+      - name: err
+        in: query
+        schema:
+          default: PASS_ERROR
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema: {}
+      responses:
+        "200":
+          description: Success with results
+        "400":
+          description: Invalid input parameters or validation error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Server error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
 components:
   schemas:
     ComponentVersion:
@@ -584,6 +672,9 @@ components:
           $ref: "#/components/schemas/Duration"
         delayDependantsForFinalNotification:
           type: boolean
+        rollbackLimit:
+          format: int32
+          type: integer
     CreateGraphRequest:
       type: object
       properties:
@@ -626,6 +717,10 @@ components:
           $ref: "#/components/schemas/ConfigurationDTO"
         queue:
           type: string
+        milestoneTask:
+          type: string
+        remoteRollback:
+          $ref: "#/components/schemas/Request"
     Duration:
       format: duration
       type: string
@@ -729,6 +824,9 @@ components:
         body: {}
         origin:
           $ref: "#/components/schemas/Origin"
+        rollbackCounter:
+          format: int32
+          type: integer
     State:
       enum:
       - NEW
@@ -743,6 +841,12 @@ components:
       - FAILED
       - SUCCESSFUL
       - STOPPED
+      - ROLLBACK_TRIGGERED
+      - TO_ROLLBACK
+      - ROLLBACK_REQUESTED
+      - ROLLINGBACK
+      - ROLLEDBACK
+      - ROLLBACK_FAILED
       type: string
     StopFlag:
       enum:
@@ -793,6 +897,12 @@ components:
             $ref: "#/components/schemas/TransitionTimeDTO"
         queue:
           type: string
+        remoteRollback:
+          $ref: "#/components/schemas/Request"
+        milestoneTask:
+          type: string
+        stoppedCause:
+          type: string
     Transition:
       enum:
       - NEW_to_WAITING
@@ -812,6 +922,38 @@ components:
       - STARTING_to_START_FAILED
       - UP_to_FAILED
       - UP_to_SUCCESSFUL
+      - UP_to_ROLLBACK_TRIGGERED
+      - STARTING_to_ROLLBACK_TRIGGERED
+      - ROLLBACK_TRIGGERED_to_ROLLEDBACK
+      - ROLLBACK_TRIGGERED_to_ROLLBACK_REQUESTED
+      - NEW_to_ROLLEDBACK
+      - WAITING_to_ROLLEDBACK
+      - ENQUEUED_to_ROLLEDBACK
+      - STOPPED_to_ROLLEDBACK
+      - SUCCESSFUL_to_TO_ROLLBACK
+      - UP_to_ROLLBACK_REQUESTED
+      - STARTING_to_ROLLBACK_REQUESTED
+      - START_FAILED_to_ROLLBACK_REQUESTED
+      - FAILED_to_ROLLBACK_REQUESTED
+      - SUCCESSFUL_to_ROLLBACK_REQUESTED
+      - UP_to_ROLLEDBACK
+      - STARTING_to_ROLLEDBACK
+      - FAILED_to_ROLLEDBACK
+      - SUCCESSFUL_to_ROLLEDBACK
+      - START_FAILED_to_ROLLEDBACK
+      - TO_ROLLBACK_to_ROLLBACK_REQUESTED
+      - ROLLBACK_REQUESTED_to_ROLLINGBACK
+      - ROLLINGBACK_to_ROLLEDBACK
+      - TO_ROLLBACK_to_ROLLEDBACK
+      - ROLLINGBACK_to_ROLLBACK_FAILED
+      - ROLLBACK_REQUESTED_to_ROLLBACK_FAILED
+      - ROLLEDBACK_to_NEW
+      - ROLLBACK_FAILED_to_NEW
+      - ROLLEDBACK_to_STOPPED
+      - ROLLBACK_FAILED_to_STOPPED
+      - ROLLINGBACK_to_STOPPED
+      - TO_ROLLBACK_to_STOPPED
+      - ROLLBACK_REQUESTED_to_STOPPED
       type: string
     TransitionTimeDTO:
       type: object
